# plx

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.short.md  report.md
.github/workflows/: release-and-publish-on-tag.yml  release-on-tag.yml  rust.yml  tag-on-version-change.yml  tag-release-and-publish.yml
examples/: README.md
examples/basics/c/: basic-output.c  continuous-output.c  exit-code-error.c  infinite_loop.c  infinite_loop_map_signals.c  nothing.c  output-begin-but-crash.c  wait_stdin.c
examples/basics/cpp/: basic-args.cpp  basic-output.cpp  basic-stdin.cpp  output-begin-but-crash.cpp
examples/basics/java/: BasicArgs.java  BasicCrash.java  BasicOutput.java
examples/full/: course.toml  skills.toml
examples/full/enums/: skill.toml
examples/full/parsing/: skill.toml
examples/full/pointers/: skill.toml
examples/full/structs/: exo.md  skill.toml
examples/full/templates/: exo.toml
examples/mock-plx-project/intro/: skill.toml
src/: app.rs  core.rs  main.rs  models.rs  plx_core.rs  ui.rs
src/app/: app.rs  check.rs  compilation.rs  errors.rs  exo_check_result.rs  exo_status_report.rs  file_watcher.rs  key_press.rs  run.rs  transitions.rs  utils.rs
src/core/: app.rs  check.rs  compiler.rs  core.rs  core_error.rs  diff.rs  editor.rs  file_utils.rs  parser.rs  process.rs  watcher.rs  work.rs
src/core/app/: app.rs  check.rs  compilation.rs  event_handler.rs  exo_check_result.rs  exo_status_report.rs  file_watcher.rs  key_press.rs  key_pressed.rs  navigation.rs  transitions.rs  utils.rs
src/core/check/: checker.rs  (+1 more)
src/models/: check.rs  check_state.rs  constants.rs  event.rs  exo.rs  exo_state.rs  key.rs  plx_check.rs  plx_check_state.rs  plx_exo.rs  plx_project.rs  plx_solution.rs  project.rs  skill.rs  solution.rs  subject.rs  ui_key.rs  ui_state.rs
src/ui/: pages.rs  ui.rs  utils.rs
(+84 files in other folders)
