[package]
name = "plx"
description = "Practice programming exos in a delightful Learning eXperience"
homepage = "https://github.com/plx-pdg/plx"
repository = "https://github.com/plx-pdg/plx"
license-file = "LICENSE"
readme = false
version = "0.1.2"
edition = "2021"
exclude = ["*.md"]

[dependencies]
console = "0.15.8"
serde = { version = "1.0.209", features = ["derive"] }
toml = "0.8.19"
ratatui = "0.28.1"
crossterm = "0.28.1"
similar = { version = "2.6.0", features = ["inline"] }
strum = "0.26.3"
dunce = "1.0.5"
notify = "6.1.1"
notify-debouncer-mini = "0.4.0"
tempfile = "3.12.0"
log = "0.4.22"
simplelog = "0.12.2"
[dev-dependencies]
ntest = "0.9.3"
